# CHATGPT

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  README.md  README_AR.md  README_CH.md  README_EN.md  README_ES.md  README_FR.md  README_IT.md  README_JP.md  README_RU.md  ReadMe.txt  STATUS_COMPONENTES.md  _install_cmake.ps1  _run_build_sim.bat  chatgpt.pas  chatgpt.ppu  docker-compose.yml  funcoes.pas  install_components.bat  install_components.sh
bridge/mediapipe_pose/: .gitignore  BUILD.bazel  README.md  WORKSPACE
bridge/mediapipe_pose/DOC/: ABI.md  BACKEND_DECISION.md  BUILD.md  INTEGRATION.md  LAZARUS_COMPONENT.md  LIMITATIONS.md  RUNTIME.md  SIM_MILESTONE.md
bridge/mediapipe_pose/build_win64_REAL/Release/: ai_mediapipe_pose_bridge_v1_0_0_mp0_10_35_win64.exp
bridge/mediapipe_pose/build_win64_REAL/mp_pose_bridge.dir/Release/: ai_mediapipe_pose_bridge_v1_0_0_mp0_10_35_win64.dll.recipe
bridge/mediapipe_pose/build_win64_REAL/mp_pose_bridge.dir/Release/mp_pose_bridge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  (+5 more)
bridge/mediapipe_pose/build_win64_SIM/Release/: ai_mediapipe_pose_bridge_v1_0_0_mp0_10_35_win64.exp
bridge/mediapipe_pose/build_win64_SIM/mp_pose_bridge.dir/Release/: ai_mediapipe_pose_bridge_v1_0_0_mp0_10_35_win64.dll.recipe
bridge/mediapipe_pose/include/: mp_pose_bridge.h
bridge/mediapipe_pose/src/: mp_pose_bridge.cpp  mp_pose_info.cpp
bridge/mediapipe_pose/tests/: smoke_test.c
bridge/mediapipe_pose/tools/: build_real.ps1  build_sim.ps1  fetch_model.ps1  fetch_model.sh
(+16480 files in other folders)
