cc_binary(
    name = "libmp_pose_bridge.so",
    srcs = [
        "src/mp_pose_info.cpp",
        "src/mp_pose_bridge.cpp",
    ],
    hdrs = [
        "include/mp_pose_bridge.h",
    ],
    copts = ["-std=c++17"],
    defines = [
        "MP_POSE_BUILD",
        "MP_BRIDGE_BACKEND_REAL",
    ],
    includes = ["include"],
    linkshared = True,
    deps = [
        "@mediapipe//mediapipe/tasks/c/vision/pose_landmarker:pose_landmarker_c",
    ],
)
