cc_binary(
    name = "libai_mediapipe_pose_bridge_v1_0_0_mp0_10_35_linux_x86_64.so",
    srcs = [
        "src/mp_pose_info.cpp",
        "src/mp_pose_bridge.cpp",
    ],
    hdrs = [
        "include/mp_pose_bridge.h",
    ],
    copts = ["-std=c++17"],
    defines = [
        "MP_POSE_BUILD",
        "MP_BRIDGE_BACKEND_REAL",
    ],
    includes = ["include"],
    linkshared = True,
    deps = [
        "@mediapipe//mediapipe/tasks/c/vision/pose_landmarker:pose_landmarker_c",
    ],
)
